Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ trigger:
 - feature/test-branch
 
 pool:
-  name: '$(buildpool)'
+  name: '$(variables.AzureDevOpsPool)'
 
 variables:
   solution: '**/*.sln'
